--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@emotion/core": "10.0.28",
     "@emotion/styled": "10.0.27",
     "@types/react-router-dom": "^5.1.3",
+    "axios": "^0.19.2",
     "emotion-theming": "10.0.27",
     "formik": "^2.1.4",
     "react": "16.13.1",
+    "react-datepicker": "^2.14.1",
     "react-dom": "16.13.1",
     "react-hook-form": "^5.1.3",
     "react-icons": "^3.9.0",
@@ -26,6 +28,7 @@
     "@types/node": "^12.12.31",
     "@types/react": "^16.9.25",
     "@types/react-dom": "^16.9.5",
+    "@types/react-datepicker": "^2.11.0",
     "tslint": "^6.1.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^9.0.0",
