--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.2",
     "emotion-theming": "10.0.27",
     "formik": "^2.1.4",
+    "griddle-react": "^1.13.1",
     "react": "16.13.1",
     "react-datepicker": "^2.14.1",
     "react-dom": "16.13.1",
