updated homepage and added meteriaui

--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
   "main": "src/index.js",
   "dependencies": {
     "@chakra-ui/core": "0.7.0",
+    "@chakra-ui/theme": "0.0.2",
+    "@date-io/date-fns": "^1.3.13",
     "@emotion/core": "10.0.28",
     "@emotion/styled": "10.0.27",
+    "@material-ui/core": "^4.9.9",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.48",
+    "@material-ui/pickers": "^3.2.10",
     "@types/react-router-dom": "^5.1.3",
     "axios": "^0.19.2",
     "emotion-theming": "10.0.27",
     "formik": "^2.1.4",
-    "griddle-react": "^1.13.1",
     "react": "16.13.1",
-    "react-datepicker": "^2.14.1",
     "react-dom": "16.13.1",
     "react-hook-form": "^5.1.3",
     "react-icons": "^3.9.0",
@@ -26,11 +30,10 @@
   },
   "devDependencies": {
     "typescript": "3.8.3",
-    "@types/node": "^12.12.31",
-    "@types/react": "^16.9.25",
+    "@types/node": "^13.11.0",
+    "@types/react": "^16.9.32",
     "@types/react-dom": "^16.9.5",
-    "@types/react-datepicker": "^2.11.0",
-    "tslint": "^6.1.0",
+    "tslint": "^6.1.1",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^9.0.0",
     "tslint-jest": "1.0.5",
