--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@material-ui/pickers": "^3.2.10",
     "@types/react-router-dom": "^5.1.3",
     "axios": "^0.19.2",
+    "date-fns": "^2.11.1",
     "emotion-theming": "10.0.27",
     "formik": "^2.1.4",
     "react": "16.13.1",
