--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.48",
     "@material-ui/pickers": "^3.2.10",
+    "@types/react-redux": "^7.1.7",
+    "@types/redux-saga": "^0.10.5",
     "@types/react-router-dom": "^5.1.3",
     "axios": "^0.19.2",
     "date-fns": "^2.11.1",
@@ -27,7 +29,11 @@
     "react-scripts": "3.4.1",
     "react-toastify": "^5.5.0",
     "validator": "^13.0.0",
-    "yup": "^0.28.3"
+    "yup": "^0.28.3",
+    "redux": "^4.0.5",
+    "react-redux": "^7.2.0",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "typescript": "3.8.3",
