--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.50",
     "@material-ui/pickers": "^3.2.10",
+    "@sentry/browser": "^5.15.5",
     "@types/react-router-dom": "^5.1.4",
     "axios": "^0.19.2",
     "date-fns": "^2.12.0",
@@ -25,8 +26,8 @@
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "react-toastify": "^5.5.0",
     "react-select": "^3.1.0",
+    "react-toastify": "^5.5.0",
     "validator": "^13.0.0",
     "yup": "^0.28.4"
   },
