--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
-    "@chakra-ui/core": "0.7.0",
-    "@chakra-ui/theme": "0.0.2",
+    "@chakra-ui/core": "0.8.0",
+    "@chakra-ui/theme": "1.0.0-next.3",
     "@date-io/date-fns": "^1.3.13",
     "@emotion/core": "10.0.28",
     "@emotion/styled": "10.0.27",
-    "@material-ui/core": "^4.9.14",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.53",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.10",
-    "@sentry/browser": "^5.15.5",
+    "@sentry/browser": "^5.19.0",
     "@types/react-router-dom": "^5.1.5",
     "axios": "^0.19.2",
     "date-fns": "^2.13.0",
@@ -22,21 +22,21 @@
     "formik": "^2.1.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-hook-form": "^5.7.2",
+    "react-hook-form": "^6.0.1",
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
-    "react-toastify": "^6.0.4",
-    "validator": "^13.0.0",
-    "yup": "^0.28.5"
+    "react-toastify": "^6.0.8",
+    "validator": "^13.1.1",
+    "yup": "^0.29.1"
   },
   "devDependencies": {
-    "typescript": "3.9.2",
-    "@types/node": "^14.0.1",
-    "@types/react": "^16.9.35",
+    "typescript": "3.9.6",
+    "@types/node": "^14.0.14",
+    "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.8",
-    "@types/react-select": "^3.0.13",
+    "@types/react-select": "^3.0.14",
     "tslint": "^6.1.2",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^9.0.0",
