--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.10",
     "@sentry/browser": "^5.23.0",
+    "@sentry/react": "^5.25.0",
+    "@sentry/tracing": "^5.25.0",
     "@types/react-router-dom": "^5.1.5",
     "axios": "^0.20.0",
     "date-fns": "^2.16.1",
