--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@sentry/browser": "^5.23.0",
     "@sentry/react": "^5.25.0",
     "@sentry/tracing": "^5.25.0",
+    "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "axios": "^0.20.0",
     "date-fns": "^2.16.1",
@@ -26,25 +27,29 @@
     "react-dom": "16.13.1",
     "react-hook-form": "^6.8.2",
     "react-icons": "^3.11.0",
+    "react-redux": "7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-select": "^3.1.0",
     "react-toastify": "^6.0.8",
-    "validator": "^13.1.1",
+    "redux": "4.0.5",
+    "redux-saga": "1.1.3",
+    "validator": "^13.1.17",
     "yup": "^0.29.3"
   },
   "devDependencies": {
-    "typescript": "4.0.2",
     "@types/node": "^14.10.1",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/react-select": "^3.0.19",
+    "redux-devtools-extension": "^2.13.8",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^9.0.0",
     "tslint-jest": "1.0.5",
     "tslint-react": "^5.0.0",
-    "tslint-react-hooks": "2.2.2"
+    "tslint-react-hooks": "2.2.2",
+    "typescript": "4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
