--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "yup": "^0.29.3"
   },
   "devDependencies": {
-    "typescript": "4.0.2",
     "@types/node": "^14.10.1",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
@@ -44,7 +43,8 @@
     "tslint-config-standard": "^9.0.0",
     "tslint-jest": "1.0.5",
     "tslint-react": "^5.0.0",
-    "tslint-react-hooks": "2.2.2"
+    "tslint-react-hooks": "2.2.2",
+    "typescript": "4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
