--- a/AccountApi/.env
+++ b/AccountApi/.env
@@ -1,4 +1,4 @@
 MONGODB_URL=
-MONGODB_URL_TEST=mongodb://mongodb:27017/test
+MONGODB_URL_TEST=mongodb://mongodb:27017/accounts
 JWT_KEY=wihefoiwhefoiwehfowifiowfbovuwehfo
 PORT=3001
