--- a/apis/AccountApi/package.json
+++ b/apis/AccountApi/package.json
@@ -3,8 +3,7 @@
   "version": "2.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/app.js",
-    "deploy": "sls deploy -v"
+    "start": "nodemon src/app.js"
   },
   "author": "Dipjyoti Metia",
   "license": "MIT",
@@ -12,15 +11,13 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "helmet": "3.22.0",
+    "helmet": "4.4.1",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.5.8",
-    "mongoose": "^5.9.18",
-    "serverless-http": "2.5.0",
-    "validator": "^13.0.0"
+    "mongodb": "^3.6.5",
+    "mongoose": "^5.12.0",
+    "validator": "^13.5.2"
   },
   "devDependencies": {
-    "serverless-offline": "6.4.0",
     "nodemon": "^2.0.4"
   }
 }
