--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
-  "name": "react",
-  "version": "0.0.0",
+  "name": "expenseweb",
+  "version": "1.0.0",
   "description": "Expense App Web Version",
   "keywords": [],
   "main": "src/index.js",
+  "author": {
+    "name": "Dipjyoti Metia"
+  },
+  "license": "MIT",
   "dependencies": {
     "@chakra-ui/core": "0.8.0",
     "@chakra-ui/theme": "1.0.0-next.3",
