--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 server {
     gzip on;
-    gzip types  text/plain text/javascript text/html application/json application/xml;
+    gzip_types  text/plain text/javascript text/html application/json application/xml;
     gzip_min_length 1000;
 
     listen  3000;
@@ -11,7 +11,6 @@ server {
     location / {
         gzip_static on;
         expires 1d;
-        add_header Cache-Control "public, no-transform";
         try_files $uri $uri/ /index.html;
     }
 }
