breking change do_not_merge

--- a/package.json
+++ b/package.json
@@ -9,43 +9,44 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@chakra-ui/core": "0.8.0",
-    "@chakra-ui/theme": "1.0.0-next.3",
-    "@date-io/date-fns": "^1.3.13",
-    "@emotion/core": "10.0.35",
-    "@emotion/styled": "10.0.27",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
-    "@material-ui/pickers": "^3.2.10",
-    "@types/react-router-dom": "^5.1.5",
-    "axios": "^0.20.0",
-    "date-fns": "^2.16.1",
-    "emotion-theming": "10.0.27",
-    "formik": "^2.1.5",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-hook-form": "^6.8.2",
-    "react-icons": "^3.11.0",
+    "@chakra-ui/react": "1.3.4",
+    "@chakra-ui/theme": "1.7.0",
+    "@date-io/date-fns": "^2.10.8",
+    "@emotion/react": "11.1.5",
+    "@emotion/styled": "11.1.5",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/pickers": "^3.3.10",
+    "@types/react-router-dom": "^5.1.7",
+    "axios": "^0.21.1",
+    "date-fns": "^2.19.0",
+    "emotion-theming": "11.0.0",
+    "formik": "^2.2.6",
+    "framer-motion": "^4.0.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-hook-form": "^6.15.5",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
-    "react-select": "^3.1.0",
-    "react-toastify": "^6.0.8",
-    "validator": "^13.1.1",
-    "yup": "^0.29.3"
+    "react-scripts": "4.0.3",
+    "react-select": "^4.3.0",
+    "react-toastify": "^7.0.3",
+    "validator": "^13.5.2",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@types/node": "^14.10.1",
-    "@types/react": "^16.9.49",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-select": "^3.0.19",
+    "@types/node": "^14.14.35",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.2",
+    "@types/react-select": "^4.0.13",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^9.0.0",
     "tslint-jest": "1.0.5",
     "tslint-react": "^5.0.0",
     "tslint-react-hooks": "2.2.2",
-    "typescript": "4.0.2"
+    "typescript": "4.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
