--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,11 @@ services:
     ports:
       - "27017:27017"
 
+  mongo_seed:
+    build: ./db
+    depends_on:
+      - mongodb
+
   swagger:
     image: swaggerapi/swagger-ui:v3.32.5
     container_name: swagger-ui
