upgrade to latest

--- a/apis/ExpenseApi/dockerfile
+++ b/apis/ExpenseApi/dockerfile
@@ -1,10 +1,10 @@
-FROM node:14.17-slim
+FROM node:18.0-slim
 
 WORKDIR /api
 
 COPY package*.json ./
 
-RUN npm install
+RUN npm install --force
 # If you are building your code for production
 # RUN npm ci --only=production
 
