--- a/package.json
+++ b/package.json
@@ -9,36 +9,37 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@chakra-ui/react": "1.6.3",
-    "@chakra-ui/theme": "1.9.0",
-    "@date-io/date-fns": "^2.10.11",
-    "@emotion/react": "11.4.0",
-    "@emotion/styled": "11.3.0",
-    "@material-ui/core": "^4.11.4",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.58",
+    "@chakra-ui/core": "^0.8.0",
+    "@chakra-ui/react": "2.1.2",
+    "@chakra-ui/theme": "2.0.3",
+    "@date-io/date-fns": "^1.3.13",
+    "@emotion/react": "11.9.0",
+    "@emotion/styled": "11.8.1",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@material-ui/pickers": "^3.3.10",
-    "@types/react-router-dom": "^5.1.7",
-    "axios": "^0.21.1",
-    "date-fns": "^2.22.1",
+    "@types/react-router-dom": "^5.3.3",
+    "axios": "^0.27.2",
+    "date-fns": "^2.28.0",
     "emotion-theming": "11.0.0",
     "formik": "^2.2.9",
     "framer-motion": "^6.3.10",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
     "react-hook-form": "^7.31.3",
-    "react-icons": "^4.2.0",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.1",
     "react-select": "^5.3.2",
-    "react-toastify": "^7.0.4",
+    "react-toastify": "^9.0.3",
     "validator": "^13.7.0",
-    "yup": "^0.32.9"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@types/node": "^14.14.37",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
+    "@types/node": "^17.0.39",
+    "@types/react": "^18.0.11",
+    "@types/react-dom": "^18.0.5",
     "@types/react-select": "^5.0.1",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
@@ -46,7 +47,7 @@
     "tslint-jest": "1.0.5",
     "tslint-react": "^5.0.0",
     "tslint-react-hooks": "2.2.2",
-    "typescript": "4.2.3"
+    "typescript": "4.7.3"
   },
   "scripts": {
     "start": "react-scripts start",
